# DQOPs

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.kubeflow  Dockerfile.mlflow  Dockerfile.spark  Makefile  OPENMETADATA-DEPLOYMENT.md  README.MD  README.md  cmd.txt  docker-compose.yml  etl.ipynb  etl_v2.ipynb  etl_v3.ipynb  etl_v4.ipynb  etl_v5.ipynb  example-helm-deploy.sh  helm-deploy.ps1  helm-deploy.sh  kubeflow_api_server.py  main.py  pycode-data-ingestion.py  pycode-spark-postgres-to-bronze.py  pyproject.toml  query_data.sh  report.md  requirements.txt  run_migration.sh  run_spark_job.sh  setup.sh  setup_superset.sh  start_pyspark.sh  test.py  test.uml  test1.py  test2.py  trainer.py
Backend/: docker-compose.yaml  main.py  requirements.txt
Data_Quality_in_Lakehouse-main/: docker-compose.yaml  init.sql
Frontend/: package.json
airflow/: Dockerfile  docker-compose.yaml  entrypoint.sh  requirements.txt
backend/: docker-compose.yaml  main.py  requirements.txt
bdsp-pipeline/: Chart.yaml  README.md  values-dev.yaml  values-production.yaml  values.yaml
chart/: Chart.yaml  values.yaml
clickhouse/: README.md  docker-compose.yaml  init-db.sh  init-db.sql
data-quality-app/: package-lock.json  package.json
data_source/: docker-compose.yaml  docker-compose.yml
dqops/: docker-compose.yaml  test.py
etl/: eda.ipynb  sentiment-inference.ipynb
factories/: job_factory.py
feature_repo/: definitions.py  feature_store.yaml
grafana/: docker-compose.yml
init-db/: init-postgres.sql
k8s/: QUICKSTART.md  README.md  airflow.yaml  backend.yaml  clean_up.ps1  (+24 more)
(+435 files in other folders)
