[project]
name = "dqops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finnhub-python>=2.4.26",
    "gdelt>=0.1.14",
    "ipykernel>=7.1.0",
    "minio>=7.2.20",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.45",
]
